<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registracija">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="725dp"
        android:layout_height="966dp"
        android:contentDescription="@string/opis1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45999998"
        app:srcCompat="@drawable/valjdaceovabiti1" />

    <EditText
        android:id="@+id/ed_password1"
        android:layout_width="377dp"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/s_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45999998" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="358dp"
        android:layout_height="74dp"
        android:text="@string/registracija"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/ed_password2"
        android:layout_width="377dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/s_password1"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/Registracija_button"
        android:layout_width="377dp"
        android:layout_height="60dp"
        android:background="#8600B6FF"
        android:fontFamily="@font/carter_one"
        android:text="@string/registrujte_se"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997" />

    <EditText
        android:id="@+id/ed_username1"
        android:layout_width="377dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/s_username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="377dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/s_email"
        android:inputType="textEmailSubject"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <RadioGroup
        android:id="@+id/radioOpcije"
        android:layout_width="141dp"
        android:layout_height="59dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/korisnik" />


    </RadioGroup>

    <TextView
        android:id="@+id/ima_log"
        android:layout_width="338dp"
        android:layout_height="60dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="124dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/vec_imate_nalog_kliknite_ovde"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="731dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>